# friday-tony-stark-demo

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  INTEGRATION.md  LEARNING_NOTES.md  PR_DESCRIPTION.md  README.md  SETUP_GUIDE.md  agent_friday.py  friday_mcp.py  friday_stt.py  main.py  pull_request_template.md  pyproject.toml  server.py  test_reminders_persistence.py  test_streaming_tts.py
.claude/: settings.json
.claude/agents/: backend-architect.md  code-reviewer.md  mcp-builder.md
.claude/commands/: brief.md  tools-audit.md  voice-mode.md
.claude/rules/: friday-conventions.md
.claude/skills/friday-tool-author/: SKILL.md
friday/: __init__.py  _entry.py  config.py
friday/core/: __init__.py  a2a.py  base_tool.py  memory_manager.py  orchestrator.py  persistence.py  result.py  skill_registry.py
friday/desktop/: __init__.py  activity.py  app.py  audio_bus.py  brain.py  chat.py  commandbar.py  events.py  launcher.py  odysseus_panel.py  orb.py  scanlines.py  statusbar.py  sysrail.py  theme.py  voicein.py  window.py
friday/memory/: __init__.py  journal.py  search.py  vault.py
friday/prompts/: templates.py
friday/resources/: data.py
friday/tools/: __init__.py  a2a_tools.py  browser.py  calculator.py  calendar.py  code_runner.py  desktop.py  diagnostics.py  enhanced_memory.py  finance.py  git.py  mac_worker.py  mail.py  memory.py  messaging.py  news.py  notify.py  odysseus.py  orchestrator_tools.py  reminders.py  shell.py  skills.py  spotify.py  system.py  tickets.py  weather.py  web.py
tests/: test_desktop_events.py  test_desktop_tools.py  test_launcher_odysseus.py  test_mac_worker_tools.py  test_messaging_tools.py  test_odysseus_panel.py  test_odysseus_tools.py  test_zip_merge_features.py
