[project]
name = "friday-tony-stark-demo"
version = "0.2.0"
description = "Friday — A Tony Stark-inspired personal AI (MCP server + LiveKit voice agent)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # MCP server
    "mcp>=1.8",
    "fastmcp>=2.3",
    # HTTP + parsing
    "httpx>=0.27",
    "feedparser>=6.0",
    # Voice agent
    "livekit-agents[deepgram,groq,openai,sarvam,silero]>=1.6.0",
    "livekit-plugins-google>=1.6.0",
    "livekit-plugins-noise-cancellation>=0.2",
    "livekit-plugins-turn-detector>=1.0",
    # Real-time data tools
    "yfinance>=0.2.50",
    # Utilities
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
calendar = [
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.130",
]
mail = [
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.130",
]
browser = [
    "playwright>=1.44",
]
git = [
    "GitPython>=3.1",
]
memory = [
    "faiss-cpu>=1.8",
    "sentence-transformers>=2.7",
]
memory-chroma = [
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
]
a2a = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
]
all = [
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.130",
    "playwright>=1.44",
    "GitPython>=3.1",
    "faiss-cpu>=1.8",
    "sentence-transformers>=2.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.scripts]
friday = "server:main"
friday_voice = "agent_friday:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py", "friday"]
